2007-12-14  Peter Bloomfield

	* src/main-window.c: (bw_notebook_label_new): drop redundant
	event box.
	* libbalsa/imap/imap-handle.c: (imap_get_address): unfold
	address string.
	* libbalsa/mailbox_imap.c: (get_struct_from_cache): crlf-filter
	the message.

2007-12-13  Peter Bloomfield

	* libbalsa/mailbox_imap.c:
	(internet_address_new_from_imap_address,
	internet_address_new_list_from_imap_address_list): handle RFC
	2822 groups.

2007-12-13  Albrecht Dreß

	* libbalsa/imap/imap-handle.c: (imap_envelope_from_stringi):
	compile fix.

2007-12-13  Peter Bloomfield

	* images/16x16/balsa-drop-down.png: new icon, used to signify that
	the list of recipient types in address-view is a drop-down list.
	* libbalsa/address-view.c: (libbalsa_address_view_finalize,
	lbav_ensure_blank_line, lbav_add_from_list,
	lbav_button_activated_cb, libbalsa_address_view_new,
	libbalsa_address_view_set_book_icon,
	libbalsa_address_view_set_close_icon,
	libbalsa_address_view_set_drop_down_icon): use pixbuf instead of
	stock-id; use the new icon.
	* libbalsa/address-view.h: change to pixbuf instead of stock-id.
	* libbalsa/cell-renderer-button.c: fix documentation.
	* src/balsa-icons.c: (register_balsa_pixmaps,
	register_balsa_pixbufs): define and register new icon.
	* src/balsa-icons.h: ditto.
	* src/sendmsg-window.c: (create_email_entry): new api for
	address-view.

2007-12-11  Peter Bloomfield

	* src/sendmsg-window.c: (sendmsg_window_compose,
	sw_grab_focus_to_text, sendmsg_window_reply,
	sendmsg_window_reply_embedded, sendmsg_window_forward,
	sendmsg_window_continue): grab focus to the message body when
	replying.

2007-12-11  Jens Granseuer

	* libbalsa/identity.c: (add_show_menu, ident_dialog_free_values,
	ident_dialog_get_value): build without ESMTP and GPG/SMIME.

2007-12-10  Peter Bloomfield

	merge balsa-address-view branch
	* libbalsa/Makefile.am:
	* libbalsa/address-entry.c:
	* libbalsa/address-entry.h:
	* src/ab-window.c:
	* src/main.c:
	* src/save-restore.c: